cluster/apps/healthchecks/networkpolicies/envoy-gateway-egress-healthchecks.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-healthchecks
  namespace: network
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: envoy-external
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app: healthchecks
            "k8s:io.kubernetes.pod.namespace": healthchecks
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
