cluster/apps/healthchecks/networkpolicies/healthchecks.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: healthchecks
  namespace: healthchecks
spec:
  endpointSelector:
    matchLabels:
      app: healthchecks
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy-gateway
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: envoy-gateway
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs: # curl/jq
        - matchName: dl-cdn.alpinelinux.org
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toFQDNs:
        - matchName: ghcr.io
        - matchName: github.com # docker-mods
        - matchName: hooks.slack.com
        - matchName: lscr.io
        - matchName: pkg-containers.githubusercontent.com
        - matchName: raw.githubusercontent.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
