cluster/apps/healthchecks/networkpolicies/ingress-nginx-egress-healthchecks.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-healthchecks
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app: healthchecks
            "k8s:io.kubernetes.pod.namespace": healthchecks
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
